--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^4.6.2",
     "mdb-react-ui-kit": "^5.1.0",
+    "mdb-ui-kit": "^6.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.3.9",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
@@ -46,5 +48,8 @@
   },
   "devDependencies": {
     "@redux-devtools/core": "^3.13.1"
+  },
+  "overrides": {
+    "autoprefixer": "10.4.5"
   }
 }
